<resources>
    <string name="app_name">Police</string>
    <string name="message">Watch face tapped</string>
    <string name="my_analog_name">My Analog</string>
    <string name="saq">Cancel</string>
    <string name="fsa">0</string>
    <string name="wqewq1">На сегодня открытых дел:</string>
    <string name="dadasdas">Сбросить</string>
    <string name="csacsac">TODO</string>
    <string name="cxzczxc">Пауза</string>
    <string name="ewqeqeq">TODO</string>
    <string name="bvxcbcxv">WSK Police</string>
    <string name="nsfdgf">TODO</string>
    <string name="rqweqwe">00:00</string>
    <string name="zxczxc">00:00</string>
    <string name="bcxbxbx">Кликер</string>
    <string name="bvxcbcxves">Секундомер</string>
    <string name="utr">TODO</string>
    <string name="qwetry">Дела</string>
    <string name="nbvv">TODO</string>
    <string name="qwe123">TODO</string>
    <string name="mnbnb">00:30:54</string>
    <string name="mnbmbn">Cancel</string>
</resources>